template/kustomization/production/app-container-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}
spec:
  template:
    spec:
      containers:
        - name: ${PROJECT_NAME}
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 350m
              memory: 512Mi
