template/kustomization/production/workload-identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}
spec:
  template:
    spec:
      serviceAccountName: ${WORKLOAD_IDENTITY_PROD}
      containers:
        - name: ${PROJECT_NAME}
