template/kustomization/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-oss
  name: ${PROJECT_NAME}-ing
spec:
  rules:
    - host: ${INGRESS_HOST_PROD}
      http:
        paths:
          - backend:
              service:
                name: ${PROJECT_NAME}-svc
                port:
                  number: 8080
            path: /${MAIN_API_PATH}
            pathType: Prefix
